# alnstats

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
src/: add_record.rs  bam_processor.rs  bam_stats_collector.rs  cigar_ext.rs  cli.rs  constants.rs  duplicate_stats.rs  error.rs  main.rs  math.rs  runtime_error.rs  statistic.rs  writer.rs  yield_stats.rs
