[package]
name = "bamstats"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.28"
noodles = { version = "0.101.0", features = ["bam", "bgzf", "core", "cram", "csi", "fasta", "fastq", "sam"] }
noodles-util = { version = "0.70.0", features = ["alignment"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "1.0.63"
