[package]
name = "alnstats"
version = "0.1.0"
edition = "2024"
default-run = "alnstats"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.10"
log = "0.4.29"
noodles = { version = "0.108.0", features = ["bam", "bgzf", "core", "cram", "csi", "fasta", "fastq", "sam"] }
noodles-util = { version = "0.77.0", features = ["alignment"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.11"
whoami = "2.1.1"
chrono = "0.4.44"

[dev-dependencies]
assert_matches = "1.5.0"

[package.metadata.release]
tag-prefix = "v"